# minecraft-accounts

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-21c5a28d818761873aaa9306e11138fd769c768d572efe9aeb613f16715cfba5.json  query-313a442db14288c57da18690718575d0274226d2dd10acbb37b1f3dcce705521.json  query-43b9005b0144836f701ff7e92c234217b26e06a1c1b26439109865226ccbdf08.json  query-8cbaf0fc0819a8158f0b43ec0b51083debe5f4fb38337009c088d3be343ebde5.json  query-8e70d7473f46b363972be0a64e9d3333177a1e4bbd09c940d68618712593db39.json  query-c18334151fef014e376b00965f40c908b55a46c84f0307c22103e0d3e7c72743.json  query-cc41f4636a68e64c7b6030f9fe53957f0a8b90cfbbecd1e884be5acbd83c6f22.json  query-ceec17ae71554bb987943d371594e8fcc0aaf3cc6dd79bb646580e84f41ccb87.json  query-f59d680dd24481a1257d2ad82a8b4999ea80dc4e4e38aa0e92a798bd379ab52b.json
migrations/: 20241116173545_create.sql  20241116175507_decouple_discord.sql  20241117211034_convert_to_uuid.sql
src/: main.rs  store.rs  util.rs
src/handlers/: add.rs  get.rs  list.rs  mod.rs  remove.rs  util.rs
