[package]
name = "minecraft-accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-nats = "0.37.0"
bytes = "1.8.0"
protobuf = "3.7.1"
tokio = {version="1.41.0", features = ["full"]}
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "migrate", "uuid", "postgres"] }
tracing = "0.1.40"
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.38"
serde = "1.0.215"
serde_json = "1.0.132"
reqwest = {  version = "0.12.9", features = ["json"]}

[build-dependencies]
protobuf-codegen = "3.7.1"
walkdir = "2.5.0"
